--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -60,6 +60,7 @@
     "static.supplyPlan.estimated": "Estimated",
     "static.commitTree.forecastSummary": "Forecast Summary",
     "static.dashboard.supplierLeadTimes": "Procurement Agent Lead Time",
+    "static.compareAndSelect.forecastSelected": "Forecast selected",
     "static.mt.confirmDelink": "Are you sure you want to delink?",
     "static.extrapolation.SeveralStatistical": "screen. Several statistical extrapolation options are available and will be described below. Extrapolations from consumption data are made on a planning unit-by-planning unit basis.",
     "static.commitVersion.exclude": "Exclude local changes",
@@ -80,6 +81,7 @@
     "static.quantimed.newconsupmtionqty": "Converted Quantimed Forecasted Consumption",
     "static.ForecastSummary.ProcurementSurplus": "procurement surplus or gaps",
     "static.message.newPasswordUppercase": "Password must contain at least one uppercase letter",
+    "static.tooltip.oneTimeDispensing": "If yes, QAT will frontload the total forecasted quantity to the node`s start month. If no, QAT will calculate the quantity discretely month-by-month",
     "static.CompareSelect.ForecastsSidebySide": "Compare the data between forecasts side-by-side by clicking the “Show Data” button below the graph. Any",
     "static.supplyPlan.duplicateConsumption": "Duplicate consumption",
     "static.forecastErrorReport.planningUnitAboveThreshold": "Calculated Forecast Error is above the Forecast Error Threshold",
@@ -272,6 +274,7 @@
     "static.manualTagging.erpPlanningUnit": "ERP Planning Unit",
     "static.supplyPlanFormula.inventoryTurns4L2": "Average Stock = (Total months of planned consumption + (Min MOS *12)) / 12",
     "static.tree.annualTargetLabel": "This calculator allows users to convert their annual targets into monthly rates directly in QAT for purposes of monthly tree forecasting. This feature is generally appropriate for products that are discrete, rather than continuous. The calculator requires actual data for the year before the forecast, the annual targets during the forecast period, and the target for the year after the forecast. QAT then calculates the change between these annual figures to generate a monthly change. The calculator will then populate the start month and value in the `Node Tab` and rows in the `Modeling & Transfer` tab.\nNote that there will always be minor differences in the final annual total forecasted and your target. However, the difference will be small if your targets change at a similar rate from year to year. The benefit of using the calculator is that it provides a dynamic rather than stairstep forecast.",
+    "static.compareAndSelect.selectForecast": "Click Planning Unit to display details",
     "static.tree.displayDate": "Display Date",
     "static.procurementagent.programtext": "Program is required",
     "static.mt.showDetails": "Details",
@@ -318,7 +321,7 @@
     "static.user.validpasswordlength": "Password can be 30 characters max",
     "static.extrapolation.BeforeYou": "Before you use this screen, please ensure you have completed the",
     "static.supplyPlan.index": "Index",
-    "static.compareAndSelect.compareToConsumptionForecast": "Compare to Consumption Forecast",
+    "static.compareAndSelect.compareToConsumptionForecast": "Compare to Consumption Forecast(s)",
     "static.mt.programNotMatch": "Program does not match.",
     "static.fundingSource.selectFundingSource": "Select Funding Source",
     "static.tree.seeChildrenOf": "See children of",
@@ -437,6 +440,7 @@
     "static.QATForecastImport.EntireForecast": "If the entire forecast period is more than 6 months in the past, the forecast cannot be imported, and the version will not appear in the program dropdown",
     "static.extrapolation.ExtrapolatedValues": "(optional) In the table, add any manual changes (+/-). These changes are added or subtracted on top of the extrapolated values.",
     "static.user.orgAndCountry": "Organization & Country",
+    "static.compareAndSelect.forecastNotSelected": "Forecast not selected",
     "static.extrapolation.ARIMAModel": "Seasonal ARIMA Model",
     "static.ForecastSummary.EnableUser": "Enable users to see a summary of their final (selected) forecasts for the entire forecast period. To view the forecasts by month, use the",
     "static.extrapolation.PoorerData": "If you have poorer data (missing data points, variable reporting rates,",
@@ -507,7 +511,7 @@
     "static.formula.suggestedText4": "” screen.",
     "static.formula.suggestedText7": "2. If Month N is stocked out (Ending Balance = 0), QAT will always suggest a shipment",
     "static.formula.suggestedText6": "1. If AMC = 0 or N/A for Month N, no suggested shipment",
-    "static.extrapolations.showFits": "Display forecasts in months with actual consumption.",
+    "static.extrapolations.showFits": "Display forecasts in months with actual consumption",
     "static.dashboard.applicationmaster": "Application masters",
     "static.program.validstatus": "Select Status",
     "static.message.fundingSource.listNotFound": "No funding source found",
@@ -517,7 +521,7 @@
     "static.common.integrationViewtext": "Select integration View",
     "static.shipment.receiveddate": "Receive Date",
     "static.formula.suggestedText9": "Min MOS, suggested shipment will bring month N to",
-    "static.compareAndSelect.showOnlyForecastPeriod": "Show only Forecast Period",
+    "static.compareAndSelect.showOnlyForecastPeriod": "Display only Forecast Period",
     "static.formula.suggestedText8": "If both of next 2 months (N+1, N+2) are",
     "static.tree.conversionFUPU": "Conversion (FU:PU)",
     "static.productcategory.productcategory": "Planning Unit Category",
@@ -579,6 +583,7 @@
     "static.report.autogenerated": "Auto Generated",
     "static.report.amc": "AMC",
     "static.tracercategory.tracercategoryText": "Select Tracer Category",
+    "static.dataentry.autogeneratedTooltip": "If checked, QAT will auto-calculate freight cost based on Program/PU settings. If unchecked, freight cost will need to be manually updated",
     "static.tree.addSuccessMessageSelected": "Your selected planning units have been added successfully. Please click add branch without adding planning units to add the branch template to your tree.",
     "static.supplyPlan.scrollToLeft": "Scroll to left",
     "static.tree.percentageOfParent": "Percentage of Parent",
@@ -673,7 +678,7 @@
     "static.report.historicalConsumptionDiff": "Historical Consumption Difference",
     "static.report.isincludeplannedshipmentSelect": "Include Planned Shipments",
     "static.whatIf.validEndValue": "Enter End Value",
-    "static.compareAndSelect.belowLowestConsumption": "% below the lowest consumption forecast.",
+    "static.compareAndSelect.belowLowestConsumption": "% below forecast.",
     "static.extrapolation.MoreSensitive": "More sophisticated models are more sensitive to problems in the data",
     "static.common.listtree": "List Tree",
     "static.dataentry.stockedOutPer": "Stockout Rate (%)",
@@ -874,6 +879,7 @@
     "static.extrapolation.tesUpper": "TES (Upper Confidence Bound)",
     "static.tree.nodeData": "Node Data",
     "static.report.forecastErrorMonthlyFormulaNew3a": "dropdown. For example, if the ‘Time Window’ selected is 6 months, then 6 months of actual consumption and 6 months of forecasted consumption is used: ",
+    "static.dataentry.autogeneratedFreight": "Auto-calculated Freight Cost",
     "static.quantimed.importatleastonerow": "Select at least one Quantimed Unit to import",
     "static.ModelingTransfer.MultiYearLossText": "the example below shows a different rate of attrition (loss) each year. Year 1 (January 2022 to December 2022) decreases the population by 1% or 54.32 each month, Year 2 (January 2023 to December 2023) decreases the population by 2% or 95.6 each month, etc. QAT utilizes a negative number to denote a decrease or loss.",
     "static.realmcountry.airFreightPercentage": "Air Freight Percentage",
@@ -1054,7 +1060,7 @@
     "static.common.programAndProgram": "Program",
     "static.supplyPlan.maxQtyFormula6": "Max Qty = 26,176",
     "static.dataEntryAndAdjustments.ClickInterpolate": "Click the green \"Interpolate\" button in the middle right of the screen to search for periods where the consumption value is blank and replace them with an interpolated value. QAT interpolates by finding the nearest values on either side (before or after the blank), calculates the straight line in between them and uses that straight-line formula to calculate the value for the blank(s).",
-    "static.compareAndSelect.aboveHighestConsumption": "% above the highest consumption forecast.",
+    "static.compareAndSelect.aboveHighestConsumption": "% above highest",
     "static.supplyPlan.artmisShipments": "PSM Shipment from ARTMIS",
     "static.mt.shipentDelivered": "Shipment is already delivered",
     "static.procurementagent.realm": "Realm",
@@ -1405,6 +1411,7 @@
     "static.formula.suggestedText95": "Step 2: Aug 2023 Ending Balance is 0",
     "static.formula.suggestedText96": "(N+1 and N+2)",
     "static.formula.suggestedText97": "Min Qty. Both of the next two months (Sept 2023 and Oct 2023) have Ending Balance (1,200) and (1,100) are",
+    "static.tree.oneTimeDispensing": "Calculate Using One Time Dispensing",
     "static.formula.suggestedText98": "Min Qty (1,000)",
     "static.formula.suggestedText91": "Unmet Demand for N (Nov 2022) = 20",
     "static.Tooltip.ProcurementsNeeded": "If there is a Procurement Gap, QAT will calculate the amount (in USD) needed to cover that gap using the Unit Price.",
@@ -2405,6 +2412,7 @@
     "static.dashboard.stockstatusmain": "Stock Status",
     "static.technicalArea.technicalAreaCode": "Technical area code",
     "static.programPU.reorderFrequencyTooltip": "How many months between shipments?",
+    "static.compareAndSelect.showPUPanel": "Show Planning Unit panel",
     "static.integration.folderLocation": "Folder location",
     "static.placeholder.placeholder": "[Placeholder]",
     "static.message.user.languageChangeError": "An error occurred while changing the language",
@@ -2449,6 +2457,7 @@
     "static.report.reviewedDate": "Latest Reviewed Date",
     "static.modelingValidation.fyDec": "Fiscal Year (e.g. FY2023 starts in Dec-22)",
     "static.datasource.datasourcetypetext": "Select data source type",
+    "static.compareAndSelect.noOfMonths": "Number of months included in calculation",
     "static.tree.lagInMonth0Immediate": "Lag in months (0=immediate)",
     "static.ForecastSummary.ProductCost": "Product Cost",
     "static.supplyPlan.total": "Total",
@@ -2471,6 +2480,7 @@
     "static.pipeline.productToPlanningUnit": "PipeLine product to Planning Unit",
     "static.label.fieldRequired": "This field is required",
     "static.tooltip.OfFuRequired": "(Discrete only) The total forecasting units required for the period. Equal to: (# of FU / Person / Time) / (# People) * (Usage Frequency, converted to frequency/month) * (Usage Period, converted to months)",
+    "static.supplyPlan.recommendToChangeFreightCost": "Recommended to change the freight cost",
     "static.dashboard.stockstatusmatrix": "Stock Status Matrix",
     "static.supplyPlanFormula.inventoryTurns1L9": "The Planned inventory turn is the Total consumption 12 divided by the calculated Average months of stock over 12 month. Thus 12 /7.25 = 1.7",
     "static.translation.spanish": "Spanish",
@@ -2652,7 +2662,7 @@
     "static.programPU.minQtyTooltip": "Required if planning by quantity. Note that maximum MOS = min MOS + reorder interval. * AMC",
     "static.syncProgram.loadAndDeleteWithUncommittedChanges": "For program {{programCode}}, There is a most recent server version. Do you want to download and delete? (Warning! you have non uploaded changes)",
     "static.LoadConsumptionFromSupplyPlanning.LoadConsumptionFromSupplyPlanning": "Load Consumption from Supply Planning",
-    "static.shipmentTooltip.freightCost": "Calculated using the user-entered freight percentage in the Update Program Info screen",
+    "static.shipmentTooltip.freightCost": "Depending on the status in Auto-calculated Freight Cost column, this value is either auto-calculated (PU Cost * Freight %) based on Program/PU settings or manually entered",
     "static.dataEntryAndAdjustments.NumberOfStock": "For imported data, the number of stock out days is pulled in from the QAT supply plan program, if data is collected. The default value for stock out days is zero days (product assumed always in stock). The user can change this to the correct value. The calculation assumes that the days the product was stocked out would have had the same consumption rate as the rest of the time the product was in stock. The default value for number of days in a month are based on the calendar days, but users can adjust the number of days used for the stock out calculation in",
     "static.program.dataimportsuccess": "Data imported successfully",
     "static.ManageTree.ClickOnGearIcon": "Click on the gear icon",
@@ -2966,7 +2976,7 @@
     "static.language.languageCode": "Language display name",
     "static.listTree.missingPlanningUnits": "Planning Units that are missing, inactive or unchecked for Tree Forecast in current program: (To see full list of current Planning Units, see",
     "static.dataentry.downloadTemplate": "Download template",
-    "static.compareAndSelect.forecastErrorMonths": "Forecast Error (# Months Used)",
+    "static.compareAndSelect.forecastErrorMonths": "Forecast (Months)",
     "static.quantimed.planningUnitNotFoundText": "Planning Unit Not Found",
     "static.loadDelDataset.programWithSameVersion": "Program with same version already exist do you want to override data.",
     "static.translation.labelCode": "Label code",
@@ -3339,6 +3349,5 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux.",
-    "static.compareAndSelect.noOfMonths": "Number of months included in calculation"
+    "static.pipeline.pipelineConvertorLinux": "Linux."
 }
