--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3349,5 +3349,8 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.program.mapForecastingUnit":"Map Forecasting Unit",
+    "static.dashboard.procurementAgentForecastingUnit": "Procurement Agent Forecasting Unit",
+    "static.planningUnit.duplicateForecastingUnit": "Duplicate Forecasting Unit Details Found"
 }
