--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3247,5 +3247,6 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.procurementagent.procurementAgentColorCodeDarkMode":"Color Code Dark Mode"
 }
