cancel bug fixed

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3248,12 +3248,12 @@
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
     "static.pipeline.pipelineConvertorLinux": "Linux.",
-    "static.extrapolation.bulkExtrapolation": "Bulk Extraploation",
+    "static.extrapolation.bulkExtrapolation": "Bulk Extrapolation",
     "static.extrapolation.optimizeTES&ARIMA": "Optimize TES & ARIMA",
     "static.extrapolation.missingTES&ARIMA": "Missing TES & ARIMA",
     "static.extrapolation.extrapolateUsingDefaultParams": "Extrapolate using default parameters",
     "static.extrapolation.extrapolateUsingOptimizedArimaAndTes": "Extrapolate with optimized ARIMA & TES",
-    "static.extrapolation.bulkExtrapolationSuccess": "Bulk Extraploation done successfully",
+    "static.extrapolation.bulkExtrapolationSuccess": "Bulk Extrapolation done successfully",
     "static.extrapolation.extrapolateTES&ARIMAUsingDefaultParams": "Extrapolate ARIMA & TES using default parameters",
     "static.extrapolation.extrapolation": "Extrapolations",
     "static.extrapolation.bulkExtrapolationNotPossible": "Extrapolation not possible as selected program planning units does not have enough data"
