--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3366,8 +3366,10 @@
     "static.pipeline.pipelineConvertorLinux": "Linux.",
     "static.common.treeTable":"Tree Table",
     "static.common.in":"in",
-    "static.treeTable.numberOrPercentage":"Number Node Value / Percentage of Parent",
+    "static.treeTable.numberOrPercentage":"Number / Percentage Node Value",
     "static.treeTable.numberOrPercentageTooltip":"Enter the value or percentage of parent at the time of the Start Month. If this value changes over time, update in the Add/Edit Node, Modeling/Transfer tab.",
     "static.treeTable.parentValueTooltip":"Value is calculated based on the Display Date. To change the Parent Value, edit the Parent Node directly.",
-    "static.treeTable.nodeValueTooltip":"Value is calculated based on the Display Date. "
+    "static.treeTable.nodeValueTooltip":"Value is calculated based on the Display Date. ",
+    "static.tree.numberNodeValue":"Number Node Value",
+    "static.tree.percentageNodeValue":"Percentage Node Value"
 }
