--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3373,8 +3373,8 @@
     "static.tree.numberNodeValue":"Number Node Value",
     "static.tree.percentageNodeValue":"Percentage Node Value",
     "static.tree.editIn":"Edit in",
-    "static.treeTable.updateNotes":"Note: Calculated values in gray cells only recalculate after clicking `Update.`",
-    "static.treeTable.rightClickNotes":"Right click on any row and click `Open this node for editing` to open that specific node in separate QAT window",
+    "static.treeTable.updateNotes":"Note: Calculated values in gray cells only recalculate after clicking `Update`.",
+    "static.treeTable.rightClickNotes":"right click on any row and click `Open this node for editing` to open that specific node in a separate QAT window",
     "static.treeTable.conversionFactor":"Conversion Factor",
     "static.treeTable.PUReference":"# PU / Interval / Patient (Reference)",
     "static.treeTable.PUInterval":"# PU / Interval / Patient",
